// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkboxes matches snapshot 1`] = `
<Checkboxes
  id="example"
  name="example"
>
  <FormGroup
    id="example"
    inputType="checkboxes"
    name="example"
  >
    <div
      className="nhsuk-form-group"
    >
      <div
        className="nhsuk-checkboxes"
        id="example"
      >
        <Box
          type="checkbox"
          value="animal"
        >
          <div
            className="nhsuk-checkboxes__item"
          >
            <input
              className="nhsuk-checkboxes__input"
              id="example-1"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="animal"
            />
            <Label
              className="nhsuk-checkboxes__label"
              htmlFor="example-1"
              id="example-1--label"
            >
              <BaseLabel
                className="nhsuk-checkboxes__label"
                htmlFor="example-1"
                id="example-1--label"
              >
                <label
                  className="nhsuk-label nhsuk-checkboxes__label"
                  htmlFor="example-1"
                  id="example-1--label"
                >
                  Waste from animal carcasses
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Box>
        <Box
          type="checkbox"
          value="mines"
        >
          <div
            className="nhsuk-checkboxes__item"
          >
            <input
              className="nhsuk-checkboxes__input"
              id="example-2"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="mines"
            />
            <Label
              className="nhsuk-checkboxes__label"
              htmlFor="example-2"
              id="example-2--label"
            >
              <BaseLabel
                className="nhsuk-checkboxes__label"
                htmlFor="example-2"
                id="example-2--label"
              >
                <label
                  className="nhsuk-label nhsuk-checkboxes__label"
                  htmlFor="example-2"
                  id="example-2--label"
                >
                  Waste from mines or quarries
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Box>
        <Box
          type="checkbox"
          value="farm"
        >
          <div
            className="nhsuk-checkboxes__item"
          >
            <input
              className="nhsuk-checkboxes__input"
              id="example-3"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="farm"
            />
            <Label
              className="nhsuk-checkboxes__label"
              htmlFor="example-3"
              id="example-3--label"
            >
              <BaseLabel
                className="nhsuk-checkboxes__label"
                htmlFor="example-3"
                id="example-3--label"
              >
                <label
                  className="nhsuk-label nhsuk-checkboxes__label"
                  htmlFor="example-3"
                  id="example-3--label"
                >
                  Farm or agricultural waste
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Box>
      </div>
    </div>
  </FormGroup>
</Checkboxes>
`;

exports[`Checkboxes matches snapshot with boolean error 1`] = `
<Checkboxes
  error={true}
  id="example"
  name="example"
>
  <FormGroup
    error={true}
    id="example"
    inputType="checkboxes"
    name="example"
  >
    <div
      className="nhsuk-form-group nhsuk-form-group--error"
    >
      <div
        className="nhsuk-checkboxes"
        id="example"
      >
        <Box
          type="checkbox"
          value="animal"
        >
          <div
            className="nhsuk-checkboxes__item"
          >
            <input
              className="nhsuk-checkboxes__input"
              id="example-1"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="animal"
            />
            <Label
              className="nhsuk-checkboxes__label"
              htmlFor="example-1"
              id="example-1--label"
            >
              <BaseLabel
                className="nhsuk-checkboxes__label"
                htmlFor="example-1"
                id="example-1--label"
              >
                <label
                  className="nhsuk-label nhsuk-checkboxes__label"
                  htmlFor="example-1"
                  id="example-1--label"
                >
                  Waste from animal carcasses
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Box>
        <Box
          type="checkbox"
          value="mines"
        >
          <div
            className="nhsuk-checkboxes__item"
          >
            <input
              className="nhsuk-checkboxes__input"
              id="example-2"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="mines"
            />
            <Label
              className="nhsuk-checkboxes__label"
              htmlFor="example-2"
              id="example-2--label"
            >
              <BaseLabel
                className="nhsuk-checkboxes__label"
                htmlFor="example-2"
                id="example-2--label"
              >
                <label
                  className="nhsuk-label nhsuk-checkboxes__label"
                  htmlFor="example-2"
                  id="example-2--label"
                >
                  Waste from mines or quarries
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Box>
        <Box
          type="checkbox"
          value="farm"
        >
          <div
            className="nhsuk-checkboxes__item"
          >
            <input
              className="nhsuk-checkboxes__input"
              id="example-3"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="farm"
            />
            <Label
              className="nhsuk-checkboxes__label"
              htmlFor="example-3"
              id="example-3--label"
            >
              <BaseLabel
                className="nhsuk-checkboxes__label"
                htmlFor="example-3"
                id="example-3--label"
              >
                <label
                  className="nhsuk-label nhsuk-checkboxes__label"
                  htmlFor="example-3"
                  id="example-3--label"
                >
                  Farm or agricultural waste
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Box>
      </div>
    </div>
  </FormGroup>
</Checkboxes>
`;

exports[`Checkboxes matches snapshot with string error 1`] = `
<Checkboxes
  error="Example error"
  id="example"
  name="example"
>
  <FormGroup
    error="Example error"
    id="example"
    inputType="checkboxes"
    name="example"
  >
    <div
      className="nhsuk-form-group nhsuk-form-group--error"
    >
      <ErrorMessage
        id="example--error-message"
        role="alert"
        visuallyHiddenText="Error: "
      >
        <span
          className="nhsuk-error-message"
          id="example--error-message"
          role="alert"
        >
          <span
            className="nhsuk-u-visually-hidden"
          >
            Error: 
          </span>
          Example error
        </span>
      </ErrorMessage>
      <div
        className="nhsuk-checkboxes"
        id="example"
      >
        <Box
          type="checkbox"
          value="animal"
        >
          <div
            className="nhsuk-checkboxes__item"
          >
            <input
              className="nhsuk-checkboxes__input"
              id="example-1"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="animal"
            />
            <Label
              className="nhsuk-checkboxes__label"
              htmlFor="example-1"
              id="example-1--label"
            >
              <BaseLabel
                className="nhsuk-checkboxes__label"
                htmlFor="example-1"
                id="example-1--label"
              >
                <label
                  className="nhsuk-label nhsuk-checkboxes__label"
                  htmlFor="example-1"
                  id="example-1--label"
                >
                  Waste from animal carcasses
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Box>
        <Box
          type="checkbox"
          value="mines"
        >
          <div
            className="nhsuk-checkboxes__item"
          >
            <input
              className="nhsuk-checkboxes__input"
              id="example-2"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="mines"
            />
            <Label
              className="nhsuk-checkboxes__label"
              htmlFor="example-2"
              id="example-2--label"
            >
              <BaseLabel
                className="nhsuk-checkboxes__label"
                htmlFor="example-2"
                id="example-2--label"
              >
                <label
                  className="nhsuk-label nhsuk-checkboxes__label"
                  htmlFor="example-2"
                  id="example-2--label"
                >
                  Waste from mines or quarries
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Box>
        <Box
          type="checkbox"
          value="farm"
        >
          <div
            className="nhsuk-checkboxes__item"
          >
            <input
              className="nhsuk-checkboxes__input"
              id="example-3"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="farm"
            />
            <Label
              className="nhsuk-checkboxes__label"
              htmlFor="example-3"
              id="example-3--label"
            >
              <BaseLabel
                className="nhsuk-checkboxes__label"
                htmlFor="example-3"
                id="example-3--label"
              >
                <label
                  className="nhsuk-label nhsuk-checkboxes__label"
                  htmlFor="example-3"
                  id="example-3--label"
                >
                  Farm or agricultural waste
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Box>
      </div>
    </div>
  </FormGroup>
</Checkboxes>
`;
